fix bad horizontal alignment on desktop width.

--- a/source/stylesheets/producteevly.css.scss
+++ b/source/stylesheets/producteevly.css.scss
@@ -6,7 +6,8 @@ body {
   font-family: Helvetica, Arial, sans-serif;
   font-weight: 400 !important;
   line-height: 1.4em;
-  max-width: 45rem;
+
+  text-align: center;
   
   font-size: 15px;
 
@@ -17,4 +18,5 @@ body {
   p {
     color: #666;
   }
+
 }
